objects/Shipment.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_Late_Delivery__c</fullName>
        <formula>ActualDeliveryDate &gt; ExpectedDeliveryDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Shipments</fullName>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
    </listViews>
    <listViews>
        <fullName>All_Shipments</fullName>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
    </listViews>
    <listViews>
        <fullName>My_Shipments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Shipments</label>
    </listViews>
    <listViews>
        <fullName>My_Shipments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Shipments</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>